// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`getBackgroundProcessInfoString formats a running process correctly 1`] = `
{
  "backgroundProcessStatus": "running",
  "command": "npm test",
  "durationMs": 2000,
  "processId": 123,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stderr": "test error",
  "stdout": "test output",
}
`;

exports[`getBackgroundProcessInfoString formats a completed process correctly 1`] = `
{
  "backgroundProcessStatus": "completed",
  "command": "npm build",
  "durationMs": 1000,
  "exitCode": 0,
  "processId": 456,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stdout": "build successful",
}
`;

exports[`getBackgroundProcessInfoString formats an errored process correctly 1`] = `
{
  "backgroundProcessStatus": "error",
  "command": "invalid-command",
  "durationMs": 1500,
  "exitCode": 1,
  "processId": 789,
  "signalCode": "SIGTERM",
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stderr": "command not found",
}
`;

exports[`getBackgroundProcessInfoString handles new output since last report 1`] = `
{
  "backgroundProcessStatus": "completed",
  "command": "echo test",
  "durationMs": 1000,
  "processId": 102,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stdout": 
"[PREVIOUS OUTPUT]
 more output"
,
}
`;

exports[`getBackgroundProcessInfoString handles no new content 1`] = `
{
  "backgroundProcessStatus": "running",
  "command": "echo test",
  "durationMs": 1000,
  "processId": 103,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
}
`;

exports[`getBackgroundProcessInfoString handles new stderr without when no previous stderr 1`] = `
{
  "backgroundProcessStatus": "error",
  "command": "echo test",
  "durationMs": 1000,
  "processId": 104,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stderr": "new error",
}
`;

exports[`getBackgroundProcessInfoString handles new stdout without when no previous stdout 1`] = `
{
  "backgroundProcessStatus": "running",
  "command": "echo test",
  "durationMs": 2000,
  "processId": 105,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stdout": "first output",
}
`;

exports[`getBackgroundProcessInfoString reports completed process with new stderr even if stdout unchanged 1`] = `
{
  "backgroundProcessStatus": "completed",
  "command": "echo test",
  "durationMs": 1000,
  "processId": 106,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stderr": "new error",
}
`;

exports[`getBackgroundProcessInfoString reports completed process with new stdout even if stderr unchanged 1`] = `
{
  "backgroundProcessStatus": "completed",
  "command": "echo test",
  "durationMs": 1000,
  "processId": 107,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stdout": 
"[PREVIOUS OUTPUT]
 more"
,
}
`;

exports[`getBackgroundProcessInfoString reports process when status changes even without output changes 1`] = `
{
  "backgroundProcessStatus": "completed",
  "command": "echo test",
  "durationMs": 1000,
  "processId": 108,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
}
`;

exports[`getBackgroundProcessInfoString calculates duration from endTime when available 1`] = `
{
  "backgroundProcessStatus": "completed",
  "command": "echo test",
  "durationMs": 1500,
  "processId": 109,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stdout": "test",
}
`;

exports[`getBackgroundProcessInfoString calculates duration from current time when no endTime 1`] = `
{
  "backgroundProcessStatus": "running",
  "command": "echo test",
  "durationMs": 2000,
  "processId": 110,
  "startTimeUtc": "1970-01-01T00:00:01.000Z",
  "stdout": "test",
}
`;
